--- a/tools/makefile
+++ b/tools/makefile
@@ -9,7 +9,7 @@ TEST = $(BASE)test/
 
 COFILE = $(ODIR)automata.o  $(ODIR)dictionary.o 
 HOFILE = $(CODE)automata.h  $(CODE)dictionary.h
-TestOFile = $(TEST)main.o $(TEST)test_old.o 
+TestOFile = $(TEST)main.o $(TEST)test_old.o  $(TEST)test.o  
 
 OPTION = -O0 
 #OPTION = -O3
@@ -36,6 +36,8 @@ $(TEST)main.o: $(HOFILE) $(TEST)main.cpp
 $(TEST)test_old.o: $(HOFILE) $(TEST)test_old.cpp
 	$(CC) -o $(TEST)test_old.o -c $(OPTION) $(TEST)test_old.cpp
 
+$(TEST)test.o: $(HOFILE) $(TEST)test.cpp
+	$(CC) -o $(TEST)test.o -c $(OPTION) $(TEST)test.cpp
 
 .PHONY: clean
 clean:
